<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/game_title"
        android:text="@string/game_title"
        android:textColor="?android:attr/colorSecondary"
        android:textSize="@dimen/title_size"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/table_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/transparent"
        app:layout_constraintBottom_toTopOf="@id/move_count"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/game_title">

    </TableLayout>

    <TextView
        android:id="@+id/move_count"
        android:text="@string/move_count"
        android:textColor="?android:attr/colorSecondary"
        android:textSize="@dimen/title_size"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/linear_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/table_layout"/>

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_gap"
            android:background="?android:attr/colorSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/move_count">

            <Button
                android:id="@+id/reset_button"
                android:text="@string/reset_button_text"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:textColor="?android:attr/colorSecondary"
                android:layout_marginHorizontal="@dimen/standard_gap"/>

            <Button
                android:id="@+id/show_valid_moves_button"
                android:text="@string/show_valid_moves_button_text"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:textColor="?android:attr/colorSecondary"
                android:layout_marginHorizontal="@dimen/standard_gap"/>

            <ImageButton
                android:id="@+id/undo_button"
                android:contentDescription="@string/undo_button_alt"
                android:text="@string/undo_button_text"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:src="@drawable/undo"
                android:background="@color/transparent"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_marginHorizontal="@dimen/standard_gap"/>

            <ImageButton
                android:id="@+id/music_toggle_button"
                android:contentDescription="@string/music_toggle_button_alt"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:background="@color/transparent"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_marginHorizontal="@dimen/standard_gap"/>

            <ImageButton
                android:id="@+id/sfx_toggle_button"
                android:contentDescription="@string/sfx_toggle_button_alt"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:background="@color/transparent"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_marginHorizontal="@dimen/standard_gap"/>
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>